// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadCards /> renders with beta 1`] = `
<DocumentFragment>
  <div
    class="download-cards__Container-k88p0k-0 hRWHDF"
  >
    <a
      class="bp3-button bp3-intent-primary download-cards__DownloadButton-k88p0k-3 jkiaFq"
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <span>
          Download v10.4.0
        </span>
        <span
          class="download-cards__Description-k88p0k-2 eLepwu"
        >
          Linux (x64)
        </span>
        <span
          class="download-cards__Description-k88p0k-2 eLepwu"
        >
          Stable, for most users
        </span>
      </span>
    </a>
    <a
      class="bp3-button download-cards__DownloadButton-k88p0k-3 jkiaFq"
      href="https://npm.taobao.org/mirrors/poi/v10.5.0/poi-10.5.0.7z"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <div>
          Download v10.5.0
        </div>
        <span
          class="download-cards__Description-k88p0k-2 eLepwu"
        >
          Linux (x64)
        </span>
        <span
          class="download-cards__Description-k88p0k-2 eLepwu"
        >
          Beta, for new features
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders with invalid target 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c2 {
  display: block;
  font-size: 1rem;
}

.c1 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c1.c1 {
  background-color: #F5F8FA;
  color: #182026;
  background-image: none;
  border: 1px solid #182026;
}

<div
    class="c0"
  >
    <a
      class="bp3-button bp3-intent-primary c1"
      data-testid="download-stable-version"
      href="https://github.com/poooi/poi/releases"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <span>
          Download v10.4.0
        </span>
        <span
          class="c2"
        >
          chiba
        </span>
        <span
          class="c2"
        >
          Stable, for most users
        </span>
      </span>
    </a>
    <a
      class="bp3-button c1"
      href="https://github.com/poooi/poi/releases"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <div>
          Download v10.5.0
        </div>
        <span
          class="c2"
        >
          chiba
        </span>
        <span
          class="c2"
        >
          Beta, for new features
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders without beta 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c2 {
  display: block;
  font-size: 1rem;
}

.c1 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c1.c1 {
  background-color: #F5F8FA;
  color: #182026;
  background-image: none;
  border: 1px solid #182026;
}

<div
    class="c0"
  >
    <a
      class="bp3-button bp3-intent-primary c1"
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
      role="button"
      tabindex="0"
    >
      <span
        class="bp3-button-text"
      >
        <span>
          Download v10.4.0
        </span>
        <span
          class="c2"
        >
          Linux (x64)
        </span>
        <span
          class="c2"
        >
          Stable, for most users
        </span>
      </span>
    </a>
  </div>
</DocumentFragment>
`;
